--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,8 @@ build_flags =
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
-    -I build/_deps/ordered_map-src/include/
+    -Ibuild/_deps/ordered_map-src/include/
+    -mtext-section-literals
 
 [esp32]
 platform = espressif32
@@ -68,7 +69,7 @@ build_flags =
 [esp32-s3]
 platform = espressif32
 board = lilygo-t7-s3
-# upload_flags = --no-stub
+upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
@@ -167,6 +168,7 @@ lib_deps =
     FS
     LittleFS
     knolleary/PubSubClient@^2.8
+    fastled/FastLED@^3.8.0
 # dvarrel/ESPping@^1.0.4
 # lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
@@ -222,3 +224,13 @@ test_ignore =
 build_src_filter =
     +<**/*>
     -<test/structure/test_furi_boost.cpp>
+
+###########################################
+############ RASBERRY PI ZERO #############
+###########################################
+[env:rpi_zero]
+platform = linux_arm
+board = raspberrypi_zero
+framework = arduino
+platform_packages =
+    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
