--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -108,7 +108,7 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process "test_scheduler;test_process" true)
     MAKE_TESTS(process/actor "test_actor" true)
     MAKE_TESTS(structure/router "test_router" true)
-    MAKE_TESTS(structure/stype/key_value "test_key_value" , true)
+    MAKE_TESTS(structure/stype/key_value "test_heap" , true)
     IF (BUILD_MQTT_TESTS)
         MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
     ENDIF ()
