--- a/platformio.ini
+++ b/platformio.ini
@@ -50,16 +50,16 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
-    -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
-    -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
-    -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
-    -DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-    -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-    -DCONFIG_ADC_CAL_LUT_ENABLE=0
-    -DCONFIG_LWIP_IPV6=0
-    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
-    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=250
+    #-DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
+    #-DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
+    #-DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
+    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
+    #-DCONFIG_LWIP_IPV6=0
+    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
+    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
+    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=250
 #-DBOARD_HAS_PSRAM
 #-mfix-esp32-psram-cache-issue
 #-DARDUINO_USB_CDC_ON_BOOT=1
@@ -69,7 +69,7 @@ build_flags =
 [esp32-s3]
 platform = espressif32
 board = lilygo-t7-s3
-upload_flags = --no-stub
+#upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
@@ -96,11 +96,11 @@ build_flags =
     -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
     -DCONFIG_ADC_CAL_LUT_ENABLE=0
     -DCONFIG_LWIP_IPV6=0
-    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
-    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=65536
-    # default 32768
-    -DSET_LOOP_TASK_STACK_SIZE=65536
+    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
+    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=32768
+    # default 65536
+    -DSET_LOOP_TASK_STACK_SIZE=32768
     ###############################
     ### BLUETOOTH CONFIGURATION ###
     ###############################
@@ -228,7 +228,7 @@ build_src_filter =
 ###########################################
 ############ RASBERRY PI ZERO #############
 ###########################################
-[env:rpi_zero]
+[env:rpi]
 platform = linux_arm
 board = raspberrypi_zero
 framework = arduino
