--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,14 @@ ENDIF()
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+#SET(CMAKE_SYSTEM_NAME Linux)
+#SET(CMAKE_C_COMPILER   i586-mingw32msvc-gcc)
+#SET(CMAKE_CXX_COMPILER i586-mingw32msvc-g++)
 ##################################
-OPTION(CMAKE_BUILD_TYPE "Build type" DEBUG)
+IF(NOT EXISTS CMAKE_BUILD_TYPE)
+    SET(CMAKE_BUILD_TYPE DEBUG)
+ENDIF()
 OPTION(CHECK_INTERNET "Check Internet" ON)
 OPTION(BUILD_TESTS "Build Tests" ON)
 OPTION(BUILD_DOCS "Build Docs" OFF)
