realized that PinDriver should should mock the Arduino pin drivers method-to-method.

--- a/platformio.ini
+++ b/platformio.ini
@@ -231,6 +231,6 @@ build_src_filter =
 [env:rpi]
 platform = linux_arm
 board = raspberrypi_zero
-framework = arduino
-platform_packages =
-    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
+framework = wiringpi
+#platform_packages =
+#    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
