--- a/platformio.ini
+++ b/platformio.ini
@@ -98,9 +98,9 @@ build_flags =
     -DCONFIG_LWIP_IPV6=0
     -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
     -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=32768
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=65536
     # default 65536
-    -DSET_LOOP_TASK_STACK_SIZE=32768
+    -DSET_LOOP_TASK_STACK_SIZE=131072
     ###############################
     ### BLUETOOTH CONFIGURATION ###
     ###############################
@@ -114,6 +114,10 @@ build_flags =
     -DCONFIG_BT_BLUEDROID_ENABLED=1
     -DCONFIG_BT_ENABLED=1
     -DCONFIG_BT_CLASSIC_ENABLED=1
+    ###############################
+    ####### HEAP DEBUGGING ########
+    ###############################
+    -DCONFIG_HEAP_TRACING_DEST=1
     #####################################
     ### FHATOS-SPECIFIC CONFIGURATION ###
     #####################################
