tweaks to Cmake build file. working towards cross compiling using use-alternatives.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
-#SET(CMAKE_C_COMPILER /usr/bin/clang)
-#SET(CMAKE_CXX_COMPILER /usr/bin/clang)
+# SET(CMAKE_C_COMPILER /usr/bin/gcc)
+# SET(CMAKE_CXX_COMPILER /usr/bin/g++)
 
 #SET(CMAKE_SYSTEM_NAME Linux)
 #SET(CMAKE_C_COMPILER   i586-mingw32msvc-gcc)
@@ -76,13 +76,18 @@ ELSEIF(LINUX)
 ENDIF()
 
 MESSAGE(NOTICE "\n\t${.y}Co${.r}M${.b}m${.c}on ${.r}b${.m}U${.c}il${.b}D ${.r}Pa${.m}rA${.y}mE${.g}Te${.r}rS${..}
-\t  ${.g}PROJECT_NAME${..}: ${PROJECT_NAME}
+\t  ${.g}PROJECT_NAME${..}    : ${PROJECT_NAME}
 \t  ${.g}CMAKE_BUILD_TYPE${..}: ${CMAKE_BUILD_TYPE}
-\t  ${.g}USE_CONAN${..}: ${USE_CONAN}
-\t  ${.g}SANITIZER${..}: ${SANITIZER}
-\t  ${.g}BUILD_TESTS${..}: ${BUILD_TESTS}
-\t  ${.g}BUILD_DOCS${..}: ${BUILD_DOCS}
-\t  ${.g}USE_CCACHE${..}: ${USE_CCACHE}
+\t  ${.g}USE_CONAN${..}       : ${USE_CONAN}
+\t  ${.g}SANITIZER${..}       : ${SANITIZER}
+\t  ${.g}BUILD_TESTS${..}     : ${BUILD_TESTS}
+\t  ${.g}BUILD_DOCS${..}      : ${BUILD_DOCS}
+\t  ${.g}USE_CCACHE${..}      : ${USE_CCACHE}
+                    ${.m}----${..}
+\t  ${.y}CMAKE_C_COMPILER${..}  : ${CMAKE_C_COMPILER}
+\t  ${.y}CMAKE_CXX_COMPILER${..}: ${CMAKE_CXX_COMPILER}
+\t  ${.y}CMAKE_C_COMPILER_VERSION${..}  : ${CMAKE_C_COMPILER_VERSION}
+\t  ${.y}CMAKE_CXX_COMPILER_VERSION${..}: ${CMAKE_CXX_COMPILER_VERSION}
 ")
 CMAKE_PRINT_VARIABLES(CMAKE_SOURCE_DIR CMAKE_BINARY_DIR CMAKE_INSTALL_PREFIX CMAKE_PREFIX_PATH CMAKE_MODULE_PATH CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION CMAKE_CXX_COMPILER_LAUNCHER CMAKE_BUILD_PARALLEL_LEVEL no-dev)
 ## PARALLELISM LEVEL (HARDCODED TO 8)
