--- a/platformio.ini
+++ b/platformio.ini
@@ -26,50 +26,8 @@ build_flags =
 
 [esp32]
 platform = espressif32
-board = ${boards.esp32.d1_mini}
-board_build.partitions = partition/large_code.csv
-board_build.flash_mode = qio
-#board_build.arduino.memory_type = qspi_opi
-# board_build.arduino.prsam_type = qio
-#board_build.arduino.memory_type: qio_opi
-# board_upload.maximum_ram_size: 524288
-# board_build.arduino.memory_type = qio_qspi
-upload_flags = --no-stub
-upload_speed = 921600
-test_speed = ${this.monitor_speed}
-monitor_speed = ${common.monitor_speed}
-#monitor_rts = 1
-#monitor_dtr = 1
-monitor_filters =
-    ${env.monitor_filters}
-    esp32_exception_decoder
-lib_ignore =
-    ESP8266Scheduler
-build_unflags =
-    ${common.build_unflags}
-build_flags =
-    ${common.build_flags}
-    -std=gnu++2a
-    #-DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
-    #-DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
-    #-DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
-    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
-    #-DCONFIG_LWIP_IPV6=0
-    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
-    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=250
-#-DBOARD_HAS_PSRAM
-#-mfix-esp32-psram-cache-issue
-#-DARDUINO_USB_CDC_ON_BOOT=1
-#-DARDUINO_USB_MODE=1
-#-DFOS_LOGGING=LOG_TYPE::NONE
-
-[esp32-s3]
-platform = espressif32
-board = lilygo-t7-s3
 #upload_flags = --no-stub
+#board_build.partitions = partition/large_code.csv
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
@@ -78,16 +36,20 @@ monitor_filters =
     esp32_exception_decoder
 lib_ignore =
     ESP8266Scheduler
+test_ignore =
+    test_main
+    structure/test_furi_boost
+    structure/stype/mqtt/test_mqtt
+    model/test_fs
+build_src_filter =
+    +<**/*>
+    -<test/structure/test_furi_boost.cpp>
 build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
-    -DSPIRAM_USE_MALLOC=1
-    -DCONFIG_SPIRAM_USE=1
-     # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=1024
     -DCONFIG_WIFI_LWIP_ALLOCATION_FROM_SPIRAM_FIRST=1
     -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
     -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
@@ -102,29 +64,30 @@ build_flags =
     # default 65536
     -DSET_LOOP_TASK_STACK_SIZE=4096
     ###############################
-    ### BLUETOOTH CONFIGURATION ###
-    ###############################
-    #-DCONFIG_CLASSIC_BT_ENABLED=y
-    #-DCONFIG_BT_ENABLED=y
-    #-DCONFIG_BTDM_CTRL_MODE_BLE_ONLY=0
-    #-DCONFIG_BTDM_CTRL_MODE_BR_EDR_ONLY=1
-    #-DCONFIG_BTDM_CTRL_MODE_BTDM=0
-    #-DCONFIG_BT_BLE_ENABLED=0
-    -DCONFIG_BT_SPP_ENABLED=1
-    -DCONFIG_BT_BLUEDROID_ENABLED=1
-    -DCONFIG_BT_ENABLED=1
-    -DCONFIG_BT_CLASSIC_ENABLED=1
-    ###############################
     ####### HEAP DEBUGGING ########
     ###############################
     -DCONFIG_HEAP_TRACING_DEST=1
     #####################################
     ### FHATOS-SPECIFIC CONFIGURATION ###
     #####################################
-    -DFOS_EXTERNAL_MEMORY_LIMIT=1024
-    -DFOS_ESP_THREAD_STACK_SIZE=8192
-    -DFOS_ESP_FIBER_STACK_SIZE=8192
-    -DFOS_MACHINE_NAME=fhatos_esp
+    -DFOS_ESP_THREAD_STACK_SIZE=16384
+    -DFOS_ESP_FIBER_STACK_SIZE=16384
+
+[psram]
+build_flags =
+    -DBOARD_HAS_PSRAM
+    -DSPIRAM_USE_MALLOC=1
+    -DCONFIG_SPIRAM_USE=1
+    # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=512
+    -DFOS_EXTERNAL_MEMORY_LIMIT=512
+
+[bluetooth]
+build_flags =
+    -DCONFIG_BT_SPP_ENABLED=1
+    -DCONFIG_BT_BLUEDROID_ENABLED=1
+    -DCONFIG_BT_ENABLED=1
+    -DCONFIG_BT_CLASSIC_ENABLED=1
 
 [esp8266]
 platform = espressif8266
@@ -216,25 +179,52 @@ test_ignore =
 ###########################################
 ################## ESP32 ##################
 ###########################################
-[env:esp32]
-extends = esp32-s3
-#test_filter =
-#    structure/test_furi
-test_ignore =
-    test_main
-    structure/test_furi_boost
-    structure/stype/mqtt/test_mqtt
-    model/test_fs
-build_src_filter =
-    +<**/*>
-    -<test/structure/test_furi_boost.cpp>
+[env:esp32-s3-pro]
+extends = esp32
+board = lolin_s3_pro
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    ${bluetooth.build_flags}
+    ############# FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s3_pro
+
+
+[env:esp32-s3-mini]
+extends = esp32
+board = lolin_s3_mini
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+#   ############ FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s3
+
+[env:esp32-s3]
+extends = esp32
+board = lilygo_t7_s3
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    ${bluetooth.build_flags}
+#   ############ FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s3
+
+
+[env:esp32-s2]
+extends = esp32
+board = lolin_s2_mini
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    ############# FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s2
 
 ###########################################
 ############ RASBERRY PI ZERO #############
 ###########################################
 [env:rpi]
-platform = linux_arm
-board = raspberrypi_zero
-framework = wiringpi
+platform = raspberrypi
+board = pico
+framework = arduino
 #platform_packages =
 #    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
