adventures in cmake and dynamically rewritting an external librarys build file. Paho MQTT blows on the build, rocks on the run. Oh the tension.

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -65,7 +65,8 @@ jobs:
       run: |
         export FHATOS_HOME=${{github.workspace}}
         export PATH=$PATH:$HOME/.local/bin:$FHATOS_HOME/bin
-        sudo -E bin/fhat-dev build native -DCHECK_INTERNET=OFF
+        sudo -E bin/fhat-dev build native -DCHECK_INTERNET=OFF -DUSE_PAHO_MQTT_HACK=ON -DBUILD_TESTS=OFF
+        sudo -E bin/fhat-dev build native -DCHECK_INTERNET=OFF -DUSE_PAHO_MQTT_HACK=ON -DBUILD_TESTS=ON
 
     - name: Deploy MQTT Broker
       working-directory: ${{github.workspace}}
