named t7-s3 board environment. increased char buffer for messages.

--- a/platformio.ini
+++ b/platformio.ini
@@ -199,7 +199,7 @@ build_flags =
 #   ############ FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_s3
 
-[env:esp32-s3]
+[env:esp32-t7-s3]
 extends = esp32
 board = lilygo_t7_s3
 build_flags =
